kubernetes/apps/networking/ingresses/ingressRoutes/audiobookshelf/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name audiobookshelf
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`audiobooks.${SECRET_DOMAIN}`)
      priority: 99
      middlewares:
        - name: headers
          namespace: networking
      #  - name: authelia
      #    namespace: default
      services:
        - name: *name
          port: 80
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
